bootstrap 5 - secao 8: projeto 02 site de educacao - correcoes texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -169,7 +169,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  desing de experiencia do usuario
+                  Desing de experiencia do usuario
                 </div>
                 <div class="card-text text-body">ux/ui school</div>
               </div>
@@ -184,7 +184,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  adobe xd - prototipação
+                  Adobe xd - prototipação
                 </div>
                 <div class="card-text text-body">adobe</div>
               </div>
@@ -212,7 +212,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  ux aplicado na construção de aplicativos
+                  Ux aplicado na construção de aplicativos
                 </div>
                 <div class="card-text text-body">comunications school</div>
               </div>
@@ -227,7 +227,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  pense novamente como entender os argumentos que convecem
+                  Pense novamente como entender os argumentos que convecem
                 </div>
                 <div class="card-text text-body">comunication school</div>
               </div>
@@ -242,7 +242,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  desenvolvimento de aplicativos android
+                  Desenvolvimento de aplicativos android
                 </div>
                 <div class="card-text text-body">developer school</div>
               </div>
@@ -257,7 +257,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  aprenda a estudar programação
+                  Aprenda a estudar programação
                 </div>
                 <div class="card-text text-body">developer school</div>
               </div>
@@ -272,7 +272,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  logica de programação
+                  Logica de programação
                 </div>
                 <div class="card-text text-body">developers school</div>
               </div>
@@ -287,7 +287,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  logomarcas inovadoras
+                  Logomarcas inovadoras
                 </div>
                 <div class="card-text text-body">adobe</div>
               </div>
