--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -169,7 +169,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
-                  Desing de experiencia do usuario
+                  Design de experiencia do usuario
                 </div>
                 <div class="card-text text-body">ux/ui school</div>
               </div>
