bootstrap 5 - secao 8: projeto 02 site de educacao - correcoes texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -171,7 +171,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Design de experiencia do usuario
                 </div>
-                <div class="card-text text-body">ux/ui school</div>
+                <div class="card-text text-body">Ux/ui School</div>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Adobe xd - prototipação
                 </div>
-                <div class="card-text text-body">adobe</div>
+                <div class="card-text text-body">Adobe</div>
               </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">ux - ui</div>
-                <div class="card-text text-body">puc university</div>
+                <div class="card-text text-body">Puc University</div>
               </div>
             </div>
           </div>
@@ -214,7 +214,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Ux aplicado na construção de aplicativos
                 </div>
-                <div class="card-text text-body">comunications school</div>
+                <div class="card-text text-body">Communications Academy</div>
               </div>
             </div>
           </div>
@@ -229,7 +229,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Pense novamente como entender os argumentos que convecem
                 </div>
-                <div class="card-text text-body">comunication school</div>
+                <div class="card-text text-body">Communications Academy</div>
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Desenvolvimento de aplicativos android
                 </div>
-                <div class="card-text text-body">developer school</div>
+                <div class="card-text text-body">Developer School</div>
               </div>
             </div>
           </div>
@@ -259,7 +259,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Aprenda a estudar programação
                 </div>
-                <div class="card-text text-body">developer school</div>
+                <div class="card-text text-body">Developer School</div>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
                 <div class="card-title text-secondary fw-bold">
                   Logica de programação
                 </div>
-                <div class="card-text text-body">developers school</div>
+                <div class="card-text text-body">Developer School</div>
               </div>
             </div>
           </div>
