bootstrap 5 - secao 8: projeto 02 site de educacao - correcoes texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -23,7 +23,7 @@
       <div class="container p-2 d-flex">
         <div class="d-none d-xl-block">
           <img alt="icon pin" src="img/pin.svg" />
-          rua heitor penteado, 1200 - sao paulo
+          Rua heitor penteado, 1200 - são paulo
         </div>
         <div class="ms-md-5 d-none d-md-block">
           <img alt="icon letter" src="img/letter.svg" />
