bootstrap 5 - secao 8: projeto 02 site de educacao - feedback do aluno parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -152,10 +152,10 @@
       </div>
     </section>
 
-    <section>
+    <section class="my-5">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center mt-5 mb-3">
+          <div class="col-12 text-center mb-3">
             <h1 class="text-secondary">Cursos em destaque</h1>
           </div>
         </div>
@@ -292,6 +292,52 @@
                 <div class="card-text text-body">adobe</div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="img/aluno01-top.svg"
+              class="img-fluid"
+              alt="foto do aluno(a)"
+            />
+            <img
+              src="img/aluno01.svg"
+              class="img-fluid"
+              alt="foto do aluno(a)"
+            />
+            <div class="card text-center m-5 p-0 px-2">
+              <div class="card-body">
+                <div class="card-title mb-0 text-secondary fw-bold">
+                  Juliana Rodrigues
+                </div>
+                <p class="card-text text-body">
+                  <small>Designer Junior</small>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <h1 class="text-secondary">
+              Feedback do nosso <span class="text-primary">aluno</span>
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+              quibusdam sit inventore culpa nesciunt voluptatibus voluptates
+              fugiat reprehenderit quod asperiores tempore eum modi
+              necessitatibus saepe facilis soluta, quam debitis. Laudantium!
+            </p>
+            <small> O curso que Juliana Rodrigues fez </small>
+            <img src="img/aluno01-curso.svg" alt="curso do aluno" />
+
+            Arte moderna, Conteporanea e Design
+            <br />
+            Museu de arte moderna
           </div>
         </div>
       </div>
