bootstrap 5 - secao 8: projeto 02 site de educacao - correcoes propriedades alt das imagens

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -180,7 +180,7 @@
               <img
                 src="img/curso02.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - adobe xd prototipacao"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -195,7 +195,7 @@
               <img
                 src="img/curso03.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - ux / ui"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">ux - ui</div>
@@ -208,7 +208,7 @@
               <img
                 src="img/curso04.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - ux apliacado na construção de aplicativos"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -223,7 +223,7 @@
               <img
                 src="img/curso05.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - pense novamente como entender os argumentos que convecem"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -238,7 +238,7 @@
               <img
                 src="img/curso06.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - desenvolvimento de aplicativos android"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -253,7 +253,7 @@
               <img
                 src="img/curso07.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - aprenda a estudar programacao"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -268,7 +268,7 @@
               <img
                 src="img/curso08.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - logica de programacao"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -283,7 +283,7 @@
               <img
                 src="img/curso09.svg"
                 class="card-img-top"
-                alt="curso - desing de experiencia do usuario"
+                alt="curso - logomacas inovadoras"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
