bootstrap 5 - secao 8: projeto 02 site de educacao - correcoes propriedades alt das imagens

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -180,7 +180,7 @@
               <img
                 src="img/curso02.svg"
                 class="card-img-top"
-                alt="curso - adobe xd prototipacao"
+                alt="curso - adobe xd prototipação"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -253,7 +253,7 @@
               <img
                 src="img/curso07.svg"
                 class="card-img-top"
-                alt="curso - aprenda a estudar programacao"
+                alt="curso - aprenda a estudar programação"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -268,7 +268,7 @@
               <img
                 src="img/curso08.svg"
                 class="card-img-top"
-                alt="curso - logica de programacao"
+                alt="curso - logica de programação"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
@@ -283,7 +283,7 @@
               <img
                 src="img/curso09.svg"
                 class="card-img-top"
-                alt="curso - logomacas inovadoras"
+                alt="curso - logomarcas inovadoras"
               />
               <div class="card-body">
                 <div class="card-title text-secondary fw-bold">
