--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -300,19 +300,24 @@
     <section class="my-5">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 position-relative">
             <img
               src="img/aluno01-top.svg"
-              class="img-fluid"
+              class="img-fluid position-absolute top-0"
+              style="width: 20%"
               alt="foto do aluno(a)"
             />
             <img
               src="img/aluno01.svg"
               class="img-fluid"
+              style="width: 100%; padding: 20px"
               alt="foto do aluno(a)"
             />
-            <div class="card text-center m-5 p-0 px-2">
-              <div class="card-body">
+            <div
+              class="card border-0 text-center mx-auto py-2"
+              style="margin-top: -50px; width: 75%"
+            >
+              <div class="card-body p-0 px-2">
                 <div class="card-title mb-0 text-secondary fw-bold">
                   Juliana Rodrigues
                 </div>
