--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -332,10 +332,10 @@
               Feedback do nosso <span class="text-primary">aluno</span>
             </h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-              quibusdam sit inventore culpa nesciunt voluptatibus voluptates
-              fugiat reprehenderit quod asperiores tempore eum modi
-              necessitatibus saepe facilis soluta, quam debitis. Laudantium!
+              Faça cursos com os melhores instrutores e universidades do mundo.
+              Os cursos incluem tarefas gravadas com avaliação automática e
+              revisadas por pares, palestras em vídeo e fóruns de discussão da
+              comunidade.
             </p>
             <small> O curso que Juliana Rodrigues fez </small>
             <img src="img/aluno01-curso.svg" alt="curso do aluno" />
