bootstrap 5 - secao 8: projeto 02 site de educacao - correção texto feedback aluno

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -335,7 +335,9 @@
               Faça cursos com os melhores instrutores e universidades do mundo.
               Os cursos incluem tarefas gravadas com avaliação automática e
               revisadas por pares, palestras em vídeo e fóruns de discussão da
-              comunidade.
+              comunidade. Ao concluir um curso, você estará qualificado para
+              receber um Certificado de curso eletrônico compartilhável por uma
+              pequena taxa.
             </p>
             <small> O curso que Juliana Rodrigues fez </small>
             <img src="img/aluno01-curso.svg" alt="curso do aluno" />
