bootstrap 5 - secao 8: projeto 02 site de educacao - secao feedback do aluno parte 3

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -331,7 +331,7 @@
             <h1 class="text-secondary">
               Feedback do nosso <span class="text-primary">aluno</span>
             </h1>
-            <p>
+            <p style="font-size: 0.8rem">
               Faça cursos com os melhores instrutores e universidades do mundo.
               Os cursos incluem tarefas gravadas com avaliação automática e
               revisadas por pares, palestras em vídeo e fóruns de discussão da
@@ -339,11 +339,29 @@
               receber um Certificado de curso eletrônico compartilhável por uma
               pequena taxa.
             </p>
-            <small> O curso que Juliana Rodrigues fez </small>
-            <img src="img/aluno01-curso.svg" alt="curso do aluno" />
-            Arte moderna, Conteporanea e Design
-            <br />
-            Museu de arte moderna
+            <div class="text-secondary fw-bold mb-3">
+              <small>O curso que Juliana Rodrigues fez</small>
+            </div>
+            <div class="row g-0">
+              <div class="col-2">
+                <img
+                  src="img/aluno01-curso.svg"
+                  class="img-fluid"
+                  alt="curso do aluno"
+                />
+              </div>
+              <div class="col">
+                <div class="bg-light p-2 ps-4">
+                  <div class="text-secondary fw-bold">
+                    <small>Arte moderna, Conteporanea e Design</small>
+                  </div>
+
+                  <div class="fw-light">
+                    <small>Museu de arte moderna</small>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
