bootstrap 5 - secao 8: projeto 02 site de educacao - correção texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -353,7 +353,7 @@
               <div class="col">
                 <div class="bg-light p-2 ps-4">
                   <div class="text-secondary fw-bold">
-                    <small>Arte moderna, Conteporanea e Design</small>
+                    <small>Arte moderna, contemporanea e Design</small>
                   </div>
 
                   <div class="fw-light">
