bootstrap 5 - secao 8: projeto 02 site de educacao - secao feedback do aluno parte 3

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -342,16 +342,20 @@
             <div class="text-secondary fw-bold mb-3">
               <small>O curso que Juliana Rodrigues fez</small>
             </div>
-            <div class="row g-0">
-              <div class="col-2">
+
+            <div class="row g-0 align-items-center">
+              <div
+                class="col-12 col-md-2 text-center text-md-start"
+                style="z-index: 1"
+              >
                 <img
                   src="img/aluno01-curso.svg"
                   class="img-fluid"
                   alt="curso do aluno"
                 />
               </div>
-              <div class="col">
-                <div class="bg-light p-2 ps-4">
+              <div class="col" style="margin-left: -5%">
+                <div class="bg-light p-2 ps-4 rounded">
                   <div class="text-secondary fw-bold">
                     <small>Arte moderna, contemporanea e Design</small>
                   </div>
