--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -357,7 +357,7 @@
               <div class="col" style="margin-left: -5%">
                 <div class="bg-light p-2 ps-4 rounded">
                   <div class="text-secondary fw-bold">
-                    <small>Arte moderna, contemporanea e Design</small>
+                    <small>Arte moderna, contemporânea e Design</small>
                   </div>
 
                   <div class="fw-light">
