--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -327,7 +327,7 @@
               </div>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-md-6">
             <h1 class="text-secondary">
               Feedback do nosso <span class="text-primary">aluno</span>
             </h1>
@@ -350,12 +350,12 @@
               >
                 <img
                   src="img/aluno01-curso.svg"
-                  class="img-fluid"
+                  class="img-fluid d-none d-md-block"
                   alt="curso do aluno"
                 />
               </div>
               <div class="col" style="margin-left: -5%">
-                <div class="bg-light p-2 ps-4 rounded">
+                <div class="bg-light p-2 ps-4 ps-lg-5 ps-xl-4 rounded">
                   <div class="text-secondary fw-bold">
                     <small>Arte moderna, contemporânea e design</small>
                   </div>
