bootstrap 5 - secao 8: projeto 02 site de educacao - correção texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -329,7 +329,7 @@
           </div>
           <div class="col-md-6">
             <h1 class="text-secondary">
-              Feedback do nosso <span class="text-primary">aluno</span>
+              Feedback do nosso <span class="text-primary">aluno(a)</span>
             </h1>
             <p style="font-size: 0.8rem">
               Faça cursos com os melhores instrutores e universidades do mundo.
