--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -371,6 +371,69 @@
       </div>
     </section>
 
+    <section class="my-5 bg-light py-5">
+      <div class="container bg-map">
+        <div class="row row-cols-2 row-cols-md-4 text-center">
+          <div class="col">
+            <img
+              src="img/thumb-cursos.svg"
+              class="img-fluid"
+              alt="icone de cusos"
+            />
+            <div class="text-secondary fs-1 fw-bold">768</div>
+            <div
+              class="text-info fw-bold text-uppercase"
+              style="font-size: 0.8rem"
+            >
+              Cursos
+            </div>
+          </div>
+          <div class="col">
+            <img
+              src="img/thumb-professores.svg"
+              class="img-fluid"
+              alt="icone de cusos"
+            />
+            <div class="text-secondary fs-1 fw-bold">128</div>
+            <div
+              class="text-info fw-bold text-uppercase"
+              style="font-size: 0.8rem"
+            >
+              Professores
+            </div>
+          </div>
+          <div class="col">
+            <img
+              src="img/thumb-estudantes.svg"
+              class="img-fluid"
+              alt="icone de cusos"
+            />
+            <div class="text-secondary fs-1 fw-bold">8.300</div>
+            <div
+              class="text-info fw-bold text-uppercase"
+              style="font-size: 0.8rem"
+            >
+              Estudantes
+            </div>
+          </div>
+          <div class="col">
+            <img
+              src="img/thumb-premios.svg"
+              class="img-fluid"
+              alt="icone de cusos"
+            />
+            <div class="text-secondary fs-1 fw-bold">32</div>
+            <div
+              class="text-info fw-bold text-uppercase"
+              style="font-size: 0.8rem"
+            >
+              Premios
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
