bootstrap 5 - secao 8: projeto 02 site de educacao - correção texto

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -427,7 +427,7 @@
               class="text-info fw-bold text-uppercase"
               style="font-size: 0.8rem"
             >
-              Premios
+              Prêmios
             </div>
           </div>
         </div>
