--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -434,6 +434,37 @@
       </div>
     </section>
 
+    <section class="my-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-5 d-none d-md-block">
+            <img
+              src="img/Recruiting.svg"
+              alt="newsletter"
+              class="img-fluid px-5"
+            />
+          </div>
+          <div class="col-md-6">
+            <h5 class="text-primary" style="font-size: 0.8rem">
+              Se inscreva agora
+            </h5>
+            <h1 class="text-secondary">Receba nossa newlatter</h1>
+            <div class="group border rounded p-1 d-flex">
+              <img src="img/letter.svg" class="p-2" alt="icone email" />
+              <input
+                type="email"
+                class="p-1 flex-grow-1"
+                placeholder="digite seu e-mail"
+              />
+              <button class="btn btn-primary" type="submit">
+                inscreva-se agora
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
