--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -448,7 +448,7 @@
             <h5 class="text-primary" style="font-size: 0.8rem">
               Se inscreva agora
             </h5>
-            <h1 class="text-secondary">Receba nossa newlatter</h1>
+            <h1 class="text-secondary">Receba nossa newslatter</h1>
             <div class="group border rounded p-1 d-flex">
               <img src="img/letter.svg" class="p-2" alt="icone email" />
               <input
