bootstrap 5 - secao 8: projeto 02 site de educacao - secao - rodape  parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -465,6 +465,35 @@
       </div>
     </section>
 
+    <footer>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col-6">
+            <div>
+              <img src="img/logo-white.svg" alt="logomarca da educacaoone" />
+              EducacaoOne
+            </div>
+            <div>
+              <div>
+                <img src="img/map-white.svg" alt="icone mapa branco" />
+                rua heitor penteado, 1200 - sao paulo
+              </div>
+              <div>
+                <img src="img/letter-white.svg" alt="icone mapa branco" />
+                contato@educacaoone.com.br
+              </div>
+              <div>
+                <img src="img/phone-white.svg" alt="icone mapa branco" />
+                (11) 33925-1195
+              </div>
+            </div>
+          </div>
+          <div class="col-6"></div>
+          <div class="col-12">Todos os direitos reservados</div>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
