bootstrap 5 - secao 8: projeto 02 site de educacao - secao - rodape  parte 1

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -488,8 +488,62 @@
               </div>
             </div>
           </div>
-          <div class="col-6"></div>
-          <div class="col-12">Todos os direitos reservados</div>
+          <div class="col-6">
+            <div class="row row-cols-3">
+              <div class="col">
+                Comunidade
+                <ul>
+                  <li>Alunos</li>
+                  <li>Parceiros</li>
+                  <li>Desenvolvedores</li>
+                  <li>Testadores</li>
+                  <li>Tradutores</li>
+                  <li>Blog</li>
+                  <li>Tech Blog</li>
+                  <li>Central de treinamento</li>
+                </ul>
+              </div>
+              <div class="col">
+                Informacao
+                <ul>
+                  <li>Sobre</li>
+                  <li>Preco</li>
+                  <li>Blog</li>
+                  <li>Carreira</li>
+                  <li>Contato</li>
+                </ul>
+              </div>
+              <div class="col">
+                Mais
+                <lu>
+                  <li>Editora</li>
+                  <li>Investidores</li>
+                  <li>Termos</li>
+                  <li>Privacidade</li>
+                  <li>Ajuda</li>
+                  <li>Acessibilidade</li>
+                  <li>Contato</li>
+                  <li>Artigo</li>
+                  <li>Afiliados</li>
+                </lu>
+              </div>
+            </div>
+          </div>
+          </div>
+          <div class="row">
+            <div class="col-12 bg-primary">
+              <div class="row justify-content-between">
+                <div class="col">Todos os direitos reservados</div>
+                <div class="col">
+                  <img alt="facebook" src="img/facebook.svg" />
+                  <img alt="pinterest" src="img/pinterest.svg" />
+                  <img alt="twitter" src="img/twitter.svg" />
+                  <img alt="instagram" src="img/instagram.svg" />
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </footer>
