bootstrap 5 - secao 8: projeto 02 site de educacao - secao - rodape  parte 2

--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -465,74 +465,74 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="bg-secondary text-white">
       <div class="container">
-        <div class="row row-cols-1 row-cols-md-2">
-          <div class="col-6">
-            <div>
-              <img src="img/logo-white.svg" alt="logomarca da educacaoone" />
-              EducacaoOne
-            </div>
-            <div>
-              <div>
-                <img src="img/map-white.svg" alt="icone mapa branco" />
-                rua heitor penteado, 1200 - sao paulo
+        <div class="row py-5 row-cols-1 row-cols-md-2">
+            <div class="cols-12 col-md-6">
+              <div class="fs-5">
+                <img class="me-2" src="img/logo-white.svg" alt="logomarca da educacaoone" />
+                EducacaoOne
               </div>
               <div>
-                <img src="img/letter-white.svg" alt="icone mapa branco" />
-                contato@educacaoone.com.br
-              </div>
-              <div>
-                <img src="img/phone-white.svg" alt="icone mapa branco" />
-                (11) 33925-1195
-              </div>
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="row row-cols-3">
-              <div class="col">
-                Comunidade
-                <ul>
-                  <li>Alunos</li>
-                  <li>Parceiros</li>
-                  <li>Desenvolvedores</li>
-                  <li>Testadores</li>
-                  <li>Tradutores</li>
-                  <li>Blog</li>
-                  <li>Tech Blog</li>
-                  <li>Central de treinamento</li>
-                </ul>
-              </div>
-              <div class="col">
-                Informacao
-                <ul>
-                  <li>Sobre</li>
-                  <li>Preco</li>
-                  <li>Blog</li>
-                  <li>Carreira</li>
-                  <li>Contato</li>
-                </ul>
-              </div>
-              <div class="col">
-                Mais
-                <lu>
-                  <li>Editora</li>
-                  <li>Investidores</li>
-                  <li>Termos</li>
-                  <li>Privacidade</li>
-                  <li>Ajuda</li>
-                  <li>Acessibilidade</li>
-                  <li>Contato</li>
-                  <li>Artigo</li>
-                  <li>Afiliados</li>
-                </lu>
+                <div class="py-2 mt-5 mt-lg-4">
+                  <img src="img/map-white.svg" alt="icone mapa branco" />
+                  rua heitor penteado, 1200 - sao paulo
+                </div>
+                <div class="py-2">
+                  <img src="img/letter-white.svg" alt="icone mapa branco" />
+                  contato@educacaoone.com.br
+                </div>
+                <div class="py-2">
+                  <img src="img/phone-white.svg" alt="icone mapa branco" />
+                  (11) 33925-1195
+                </div>
               </div>
             </div>
-          </div>
+            <div class="col-6">
+              <div class="row row-cols-1 row-cols-lg-3">
+                <div class="col">
+                  <h5 class="fs-6 fw-bold">Comunidade</h5>
+                  <ul class="list-unstyled">
+                    <li>Alunos</li>
+                    <li>Parceiros</li>
+                    <li>Desenvolvedores</li>
+                    <li>Testadores</li>
+                    <li>Tradutores</li>
+                    <li>Blog</li>
+                    <li>Tech Blog</li>
+                    <li>Central de treinamento</li>
+                  </ul>
+                </div>
+                <div class="col">
+                  <h5 class="fs-6 fw-bold">Informacao</h5>
+                  <ul class="list-unstyled">
+                    <li>Sobre</li>
+                    <li>Preco</li>
+                    <li>Blog</li>
+                    <li>Carreira</li>
+                    <li>Contato</li>
+                  </ul>
+                </div>
+                <div class="col">
+                  <h5 class="fs-6 fw-bold">Mais</h5>
+                  <lu class="list-unstyled">
+                    <li>Editora</li>
+                    <li>Investidores</li>
+                    <li>Termos</li>
+                    <li>Privacidade</li>
+                    <li>Ajuda</li>
+                    <li>Acessibilidade</li>
+                    <li>Contato</li>
+                    <li>Artigo</li>
+                    <li>Afiliados</li>
+                  </lu>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="row">
-            <div class="col-12 bg-primary">
-              <div class="row justify-content-between">
+            <div class="col-12 p-4 bg-primary">
+              <div class="d-flex justify-content-between text-black">
                 <div class="col">Todos os direitos reservados</div>
                 <div class="col">
                   <img alt="facebook" src="img/facebook.svg" />
