--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -479,11 +479,11 @@
                   rua heitor penteado, 1200 - sao paulo
                 </div>
                 <div class="py-2">
-                  <img src="img/letter-white.svg" alt="icone mapa branco" />
+                  <img src="img/letter-white.svg" alt="icone carta branco" />
                   contato@educacaoone.com.br
                 </div>
                 <div class="py-2">
-                  <img src="img/phone-white.svg" alt="icone mapa branco" />
+                  <img src="img/phone-white.svg" alt="icone telefone branco" />
                   (11) 33925-1195
                 </div>
               </div>
