--- a/spacedu/projeto02-site-educacao/aula04/index.html
+++ b/spacedu/projeto02-site-educacao/aula04/index.html
@@ -504,7 +504,7 @@
                   </ul>
                 </div>
                 <div class="col">
-                  <h5 class="fs-6 fw-bold">Informacao</h5>
+                  <h5 class="fs-6 fw-bold">Informação</h5>
                   <ul class="list-unstyled">
                     <li>Sobre</li>
                     <li>Preco</li>
