--- a/spacedu/secao09/aula01/index.html
+++ b/spacedu/secao09/aula01/index.html
@@ -12,6 +12,81 @@
     />
   </head>
   <body>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-6">
+          <h1>formulario</h1>
+          <form>
+            <div>
+              <label for="nome">Nome:</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nome"
+                placeholder="Digite seu nome"
+              />
+            </div>
+            <h1 class="mt-5">Contato</h1>
+            <div class="row">
+              <label for="nome" class="col-form-label col-2">Nome:</label>
+              <div class="col-9">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nome"
+                  placeholder="Digite seu nome"
+                />
+              </div>
+            </div>
+            <div class="row">
+              <label for="email" class="col-form-label col-2">E-mail:</label>
+              <div class="col-9">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="email"
+                  placeholder="Digite seu nome"
+                />
+              </div>
+            </div>
+            <div class="row">
+              <label for="telefone" class="col-form-label col-2"
+                >Telefone:</label
+              >
+              <div class="col-9">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="telefone"
+                  placeholder="Digite seu nome"
+                />
+              </div>
+            </div>
+            <div class="row">
+              <label for="mensagem" class="col-form-label col-2"
+                >Mensagem:</label
+              >
+              <div class="col-9">
+                <textarea
+                  type="text"
+                  class="form-control"
+                  id="mensagem"
+                  placeholder="Digite seu nome"
+                >
+                </textarea>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col offset-3">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
