--- a/spacedu/secao09/aula01/index.html
+++ b/spacedu/secao09/aula01/index.html
@@ -27,7 +27,7 @@
               />
             </div>
             <h1 class="mt-5">Contato</h1>
-            <div class="row">
+            <div class="row mb-3">
               <label for="nome" class="col-form-label col-2">Nome:</label>
               <div class="col-9">
                 <input
@@ -38,7 +38,7 @@
                 />
               </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
               <label for="email" class="col-form-label col-2">E-mail:</label>
               <div class="col-9">
                 <input
@@ -49,7 +49,7 @@
                 />
               </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
               <label for="telefone" class="col-form-label col-2"
                 >Telefone:</label
               >
@@ -62,7 +62,7 @@
                 />
               </div>
             </div>
-            <div class="row">
+            <div class="row mb-3">
               <label for="mensagem" class="col-form-label col-2"
                 >Mensagem:</label
               >
@@ -77,7 +77,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row mb-3">
               <div class="col offset-3">
                 <button type="submit" class="btn btn-primary">Enviar</button>
               </div>
