--- a/spacedu/secao09/aula01/index.html
+++ b/spacedu/secao09/aula01/index.html
@@ -45,7 +45,7 @@
                   type="text"
                   class="form-control"
                   id="email"
-                  placeholder="Digite seu nome"
+                  placeholder="Digite seu e-mail"
                 />
               </div>
             </div>
@@ -58,7 +58,7 @@
                   type="text"
                   class="form-control"
                   id="telefone"
-                  placeholder="Digite seu nome"
+                  placeholder="Digite seu telefone"
                 />
               </div>
             </div>
@@ -71,7 +71,7 @@
                   type="text"
                   class="form-control"
                   id="mensagem"
-                  placeholder="Digite seu nome"
+                  placeholder="Digite sua mensagem"
                 >
                 </textarea>
               </div>
