bootstrap 5 - secao 9: formularios - formularios com bootstrat 5

--- a/spacedu/secao09/aula01/index.html
+++ b/spacedu/secao09/aula01/index.html
@@ -18,7 +18,7 @@
           <h1>formulario</h1>
           <form>
             <div>
-              <label for="nome">Nome:</label>
+              <label for="nome">Nome</label>
               <input
                 type="text"
                 class="form-control"
@@ -28,7 +28,7 @@
             </div>
             <h1 class="mt-5">Contato</h1>
             <div class="row mb-3">
-              <label for="nome" class="col-form-label col-2">Nome:</label>
+              <label for="nome" class="col-form-label col-2">Nome</label>
               <div class="col-9">
                 <input
                   type="text"
@@ -39,7 +39,7 @@
               </div>
             </div>
             <div class="row mb-3">
-              <label for="email" class="col-form-label col-2">E-mail:</label>
+              <label for="email" class="col-form-label col-2">E-mail</label>
               <div class="col-9">
                 <input
                   type="text"
@@ -51,7 +51,7 @@
             </div>
             <div class="row mb-3">
               <label for="telefone" class="col-form-label col-2"
-                >Telefone:</label
+                >Telefone</label
               >
               <div class="col-9">
                 <input
@@ -64,7 +64,7 @@
             </div>
             <div class="row mb-3">
               <label for="mensagem" class="col-form-label col-2"
-                >Mensagem:</label
+                >Mensagem</label
               >
               <div class="col-9">
                 <textarea
