bootstrap 5 - secao 9: formularios - checkboox

--- a/spacedu/secao09/aula04/index.html
+++ b/spacedu/secao09/aula04/index.html
@@ -49,6 +49,62 @@
             />
             <label class="form-check-label" form="outros">outros</label>
           </div>
+
+          <h1>checkbox</h1>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              name="sexo"
+              id="php"
+              value="php"
+            />
+            <label class="form-check-label" form="php">php</label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              name="sexo"
+              id="java"
+              value="java"
+            />
+            <label class="form-check-label" form="feminino">java</label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              name="sexo"
+              id="javascript"
+              value="javascript"
+            />
+            <label class="form-check-label" form="javascript">javascript</label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              name="sexo"
+              id="csharp"
+              value="csharp"
+            />
+            <label class="form-check-label" form="csharp">c#</label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              name="sexo"
+              id="python"
+              value="python"
+            />
+            <label class="form-check-label" form="python">python</label>
+          </div>
         </div>
       </div>
     </div>
@@ -58,5 +114,9 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script>
+      var inpurtPython = document.getElementById("python");
+      inpurtPython.indeterminate = true;
+    </script>
   </body>
 </html>
