--- a/spacedu/secao09/aula08/index.html
+++ b/spacedu/secao09/aula08/index.html
@@ -17,7 +17,7 @@
         <div class="col-6">
           <h1>Cadastro de clientes</h1>
 
-          <form>
+          <form novalidate class="needs-validation">
             <div class="mt-3">
               <label>Nome</label>
               <input
@@ -37,6 +37,8 @@
                 type="email"
                 placeholder="Digite seu email"
               />
+              <div class="valid-feedback">e-mail aprovado</div>
+              <div class="invalid-feedback">e-mail reprovado</div>
             </div>
             <div class="mt-3">
               <label>Telefone</label>
@@ -71,5 +73,17 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script>
+      var forms = document.querySelector(".needs-validation");
+
+      forms.addEventListener("submit", (e) => {
+        if (e.target.checkValidity() === false) {
+          e.preventDefault();
+          e.stopPropagation();
+        }
+
+        forms.classList.add("was-validated");
+      });
+    </script>
   </body>
 </html>
