bootstrap 5 - secao 10: tabelas - tabelas e cores

--- a/spacedu/secao10/aula01/index.html
+++ b/spacedu/secao10/aula01/index.html
@@ -15,7 +15,7 @@
     <div class="container py-5">
       <div class="row">
         <div class="col">
-          <h3 class="lead">Primeira tabela Bootstrat</h3>
+          <h3 class="lead">Primeira tabela bootstrap</h3>
 
           <table class="table">
             <thead>
@@ -62,7 +62,7 @@
             </tbody>
           </table>
 
-          <h3 class="lead">Segunda tabela Bootstrat</h3>
+          <h3 class="lead">Segunda tabela bootstrap</h3>
 
           <table class="table">
             <thead>
