bootstrap 5 - secao 10: tabelas - responsividade

--- a/spacedu/secao10/aula04/index.html
+++ b/spacedu/secao10/aula04/index.html
@@ -17,50 +17,80 @@
         <div class="col">
           <h3 class="lead">Alinhamento dos textos na tabela</h3>
 
-          <table class="table align-middle">
-            <thead>
-              <tr>
-                <th class="col">COD</th>
-                <th class="col">NOME</th>
-                <th class="col">CNPJ</th>
-                <th class="col">E-MAIL</th>
-                <th class="col">TELEFONE</th>
-                <th class="col">AÇÂO</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="align-bottom">
-                <td>1</td>
-                <td>DELL</td>
-                <td>70.950.571/0001-72</td>
-                <td>contato@dell.com.br</td>
-                <td>0800 6666 2333</td>
-                <td>
-                  <button class="btn btn-outline-primary">visualizar</button>
-                </td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>HP</td>
-                <td>70.950.571/0001-72</td>
-                <td>contato@dell.com.br</td>
-                <td>0800 6666 2333</td>
-                <td>
-                  <button class="btn btn-outline-primary">visualizar</button>
-                </td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>LENOVO</td>
-                <td>70.950.571/0001-72</td>
-                <td>contato@dell.com.br</td>
-                <td>0800 6666 2333</td>
-                <td>
-                  <button class="btn btn-outline-primary">visualizar</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="tabela-responsive">
+            <table class="table align-middle">
+              <thead>
+                <tr>
+                  <th class="col">COD</th>
+                  <th class="col">NOME</th>
+                  <th class="col">CNPJ</th>
+                  <th class="col">E-MAIL</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">TELEFONE</th>
+                  <th class="col">AÇÂO</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="align-bottom">
+                  <td>1</td>
+                  <td>DELL</td>
+                  <td>70.950.571/0001-72</td>
+                  <td>contato@dell.com.br</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>
+                    <button class="btn btn-outline-primary">visualizar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>HP</td>
+                  <td>70.950.571/0001-72</td>
+                  <td>contato@dell.com.br</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>
+                    <button class="btn btn-outline-primary">visualizar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>LENOVO</td>
+                  <td>70.950.571/0001-72</td>
+                  <td>contato@dell.com.br</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>0800 6666 2333</td>
+                  <td>
+                    <button class="btn btn-outline-primary">visualizar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
