--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -10,7 +10,10 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <style></style>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <div class="container-fluid">
