--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -18,7 +18,18 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-1 bg-primary text-white vh-100">Menu</div>
+        <div
+          class="col-1 col-xl-2 bg-primary vh-100 d-flex justify-content-center"
+        >
+          <ul class="nav pt-4">
+            <li class="nav-item">
+              <a href="#" class="text-white text-decoration-line-none fs-3">
+                <i class="bi bi-speedometer2"></i>
+                <span class="d-none d-xl-inline-block">Dashboardd</span>
+              </a>
+            </li>
+          </ul>
+        </div>
         <div class="col bg-light">
           <div class="row">
             <h1>Dashboard</h1>
