--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -25,7 +25,7 @@
             <li class="nav-item">
               <a href="#" class="text-white text-decoration-line-none fs-3">
                 <i class="bi bi-speedometer2"></i>
-                <span class="d-none d-xl-inline-block">Dashboardd</span>
+                <span class="d-none d-xl-inline-block">Dashboard</span>
               </a>
             </li>
           </ul>
