--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css"
     />
+    <style type="text/css">
+      .bg-white-50 {
+        background-color: rgba(255, 255, 255, 0.5);
+      }
+    </style>
   </head>
   <body>
     <div class="container-fluid">
@@ -67,7 +72,19 @@
             </div>
           </div>
         </div>
-        <div class="col-3 bg-primary text-white vh-100">Notificacoes</div>
+        <div class="d-none d-xl-block col-3 bg-primary text-white vh-100">
+          <h1 class="lead text-center">Notificacoes</h1>
+
+          <div class="mt-4 mx-2 bg-white-50 p-2 rounded">
+            <h5>Maria diz:</h5>
+            <p class="mb-0">Preciso do relatorio de vendas hoje a tarde.</p>
+          </div>
+
+          <div class="mt-4 mx-2 bg-white-50 p-2 rounded">
+            <h5>Joao diz:</h5>
+            <p class="mb-0">Me envia a tabela de valores por favor.</p>
+          </div>
+        </div>
       </div>
     </div>
 
