bootstrap 5 - secao 11: projeto dashboard - notificacoes

--- a/spacedu/projeto03-dashboard/index.html
+++ b/spacedu/projeto03-dashboard/index.html
@@ -81,7 +81,7 @@
           </div>
 
           <div class="mt-4 mx-2 bg-white-50 p-2 rounded">
-            <h5>Joao diz:</h5>
+            <h5>João diz:</h5>
             <p class="mb-0">Me envia a tabela de valores por favor.</p>
           </div>
         </div>
